# rr_control_input_manager

./: CMakeLists.txt  package.xml
scripts/: control_input_manager.py  xbox_mapper.py
