<?xml version="1.0"?>
<package format="2">
  <name>rr_control_input_manager</name>
  <version>0.0.0</version>
  <description>The rr_control_input_manager package</description>

  <maintainer email="padilla@digilabs.io">Nicholas Padilla</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
